chnage to 21 and update the rest of the dependencies